--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@mui/styled-engine-sc": "^5.12.0",
         "@mui/x-data-grid-generator": "^6.11.0",
         "@mui/x-data-grid-pro": "^6.11.0",
+        "@react-oauth/google": "^0.12.1",
         "@reduxjs/toolkit": "^1.9.5",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
@@ -31,7 +32,6 @@
         "react-datepicker": "^4.16.0",
         "react-day-picker": "^8.8.0",
         "react-dom": "^18.2.0",
-        "react-google-login": "^5.2.2",
         "react-hot-toast": "^2.4.1",
         "react-redux": "^8.1.2",
         "react-router-dom": "^6.14.2",
